add * 常用工具类及包装等的简单测试，api文档未验证

--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,9 @@
     </developers>
 
     <modules>
+        <module>mod-core</module>
         <module>mod-common</module>
         <module>mod-test</module>
-        <module>mod-core</module>
     </modules>
 
     <properties>
@@ -73,6 +73,8 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${reversion.lombok}</version>
+                <scope>provided</scope>
+                <optional>true</optional>
             </dependency>
         </dependencies>
     </dependencyManagement>
