mod * 修改包名 * 修改pom文件以deploy至maven central

--- a/mod-test/service-reactive/pom.xml
+++ b/mod-test/service-reactive/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>cn.bfk</groupId>
+        <groupId>io.github.baifangkual</groupId>
         <artifactId>mod-test</artifactId>
         <version>0.0.1</version>
     </parent>
