--- a/mod-common/pom.xml
+++ b/mod-common/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>cn.bfk</groupId>
+        <groupId>io.github.baifangkual</groupId>
         <artifactId>bfk-j</artifactId>
         <version>0.0.1</version>
     </parent>
