mod * version up to 0.0.4

--- a/mod-core/pom.xml
+++ b/mod-core/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>io.github.baifangkual</groupId>
         <artifactId>bfk-j</artifactId>
-        <version>0.0.2</version>
+        <version>0.0.4</version>
     </parent>
 
     <name>mod-core</name>
     <artifactId>mod-core</artifactId>
-    <description>bfk-j mod-core 核心模块及工具类</description>
+    <description>bfk-j mod-core 核心模块</description>
     <url>https://github.com/baifangkual/bfk-j</url>
     <scm>
         <connection>scm:git:git://github.com/baifangkual/bfk-j.git</connection>
