add: mod-vfs-impl-ftp模块当时的测试类 mod: pom junit测试库依赖

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,12 @@
                 <artifactId>slf4j-api</artifactId>
                 <version>${reversion.slf4j-api}</version>
             </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>${reversion.jupiter-api}</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
