--- a/mod-vfs/mod-vfs-impl-smb/pom.xml
+++ b/mod-vfs/mod-vfs-impl-smb/pom.xml
@@ -74,6 +74,12 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${reversion.jupiter-api}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
