refactor: deprecated interface Default and Anno Default.prov
-- todo remove this class...
-- 这种通过javaSPI寻找提供者的方式已测试可行，即：SPI Stream（不加载实例，但可以获取到Class） + Anno（因为可以获取到Class，则可通过反射获取到Anno信息）。
但达不到想要的效果：
Default可以处理一般不携带泛型的类型的实例，但defaultInstance有泛型信心，则得通过TypeRef
这样的方式太丑：Default.get(new TypeRef<List<String>>(){}) ...
遂该类需被废弃并完全删除，不过这次实践蛮有意思...

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
         <reversion.slf4j-api>2.0.13</reversion.slf4j-api>
         <reversion.slf4j-simple>2.0.13</reversion.slf4j-simple>
         <reversion.jupiter-api>5.10.2</reversion.jupiter-api>
+        <reversion.auto-service>1.1.1</reversion.auto-service> <!-- THIS USE TO SPI FILE AUTO GEN -->
         <!-- boot 与 cloud 版本有兼容性对应关系 -->
         <reversion.spring-boot-dependencies>3.2.7</reversion.spring-boot-dependencies>
         <reversion.spring-cloud-dependencies>2023.0.3</reversion.spring-cloud-dependencies>
@@ -99,6 +100,13 @@
                 <artifactId>junit-jupiter-api</artifactId>
                 <version>${reversion.jupiter-api}</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.google.auto.service</groupId>
+                <artifactId>auto-service</artifactId>
+                <version>${reversion.auto-service}</version>
+                <scope>provided</scope>
+                <optional>true</optional>
             </dependency>
         </dependencies>
     </dependencyManagement>
