pref: Tree type NView mut to Node, type Node mut to UnsafeNode, get and set use unsafeMethod, remove many get and set fn, destroyNode use composeUnsafeMethod, remove fnDestroy
- refactor: Tree toJson -> toJsonStr
- perf: tree toJsonStr
- docs: tree
- test: tree
-

--- a/mod-vfs/mod-vfs-impl-ftp/pom.xml
+++ b/mod-vfs/mod-vfs-impl-ftp/pom.xml
@@ -79,6 +79,12 @@
             <version>${reversion.jupiter-api}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${reversion.slf4j-simple}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
