--- a/mod-core/pom.xml
+++ b/mod-core/pom.xml
@@ -40,6 +40,13 @@
     </properties>
 
     <dependencies>
+        <!-- ============= test scope ============= -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${reversion.jackson}</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -47,7 +54,6 @@
             <scope>test</scope>
             <optional>true</optional>
         </dependency>
-        <!-- ============= test scope ============= -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
