--- a/jlib-db/pom.xml
+++ b/jlib-db/pom.xml
@@ -37,6 +37,12 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <!-- dep jdbc API Driver-->
+        <reversion.mysql-driver>8.3.0</reversion.mysql-driver>
+        <reversion.sqlserver-driver>12.6.2.jre11</reversion.sqlserver-driver>
+        <reversion.oracle-driver>21.9.0.0</reversion.oracle-driver>
+        <reversion.postgresql-driver>42.7.3</reversion.postgresql-driver>
+        <reversion.sqlite-driver>3.46.0.0</reversion.sqlite-driver>
     </properties>
 
     <dependencies>
@@ -50,14 +56,13 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${reversion.lombok}</version>
-            <scope>test</scope>
+            <scope>provided</scope>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${reversion.slf4j-api}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -69,6 +74,37 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>${reversion.jupiter-api}</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- JDBC IMPL ================= -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${reversion.postgresql-driver}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>${reversion.mysql-driver}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>${reversion.sqlite-driver}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>${reversion.sqlserver-driver}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc11</artifactId>
+            <version>${reversion.oracle-driver}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
